refactor test framework to be able to call it from modules
git-svn-id: svn://localhost/jahia/trunk@27451 69c369ed-ed09-0410-a4a1-e19a46c23626