@@ -680,6 +680,57 @@
                 </jahia.modules.bundle.removeheaders>
             </properties>
         </profile>
+        <profile>
+            <id>unit-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${surefire.plugin.version}</version>
+                        <configuration>
+                            <argLine>-Xmx2048m -XX:MaxPermSize=320m</argLine>
+                            <skipTests>false</skipTests>
+                            <systemProperties>
+                              <property>
+                                <name>jahia.license</name>
+                                <value>jahia.license</value>
+                              </property>
+                              <property>
+                                <name>jahia.config</name>
+                                <value>jahiaunittest.properties</value>
+                              </property>
+                              <property>
+                                <name>jahiaWebAppRoot</name>
+                                <value>./target/test-repo</value>
+                              </property>                              
+                            </systemProperties>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <testNGArtifactName>none:none</testNGArtifactName>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>test-testng</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <junitArtifactName>none:none</junitArtifactName>
+                                </configuration>
+                            </execution>
+                        </executions>                        
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>        
     </profiles>
 
     <distributionManagement>
